--- a/html/admin-product.html
+++ b/html/admin-product.html
@@ -209,67 +209,14 @@
     $('[rel="tooltip"]').on('click', function () {
       $(this).tooltip('hide')
     });
-    var actions = $("table td:last-child").html();
+      
 
-    // Add-new button click handler
     
-
-    // Add row on add button click
-    $(document).on("click", ".add", function () {
-      var empty = false;
-      var input = $(this)
-        .parents("tr")
-        .find('input[type="text"]');
-      input.each(function () {
-        if (!$(this).val()) {
-          $(this).addClass("error");
-          empty = true;
-        } else {
-          $(this).removeClass("error");
-        }
-      });
-      $(this)
-        .parents("tr")
-        .find(".error")
-        .first()
-        .focus();
-      if (!empty) {
-        input.each(function () {
-          $(this)
-            .parent("td")
-            .html($(this).val());
-        });
-        $(this)
-          .parents("tr")
-          .find(".add, .edit")
-          .toggle();
-        $(".add-new").removeAttr("disabled");
-
-        try {
-
-        } catch {
-
-        }
-      }
-    });
 
     // Edit row on edit button click
     $(document).on("click", ".edit", function () {
-      $(this)
-        .parents("tr")
-        .find("td:not(:last-child)")
-        .each(function () {
-          $(this).html(
-            '<input type="text" class="form-control" value="' +
-            $(this).text() +
-            '">'
-          );
-        });
-      $(this)
-        .parents("tr")
-        .find(".add, .edit")
-        .toggle();
-      $(".add-new").attr("disabled", "disabled");
+      var pid = $(this).attr('id');
+      window.location.href = `/admin/product-edit/${pid}`
     });
 
     // Delete row on delete button click
