--- a/html/admin-product-add.html
+++ b/html/admin-product-add.html
@@ -18,15 +18,8 @@
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
     <script>
         $(document).ready(function () {
-            try {
-                var id = 0;
-
-                id = document.cookie.split(";")[1]
-                id = id.split("=")[1]
-                console.log("id" + id)
-            } catch {
-                window.location.href = "http://localhost:3000/signin"
-            }
+            var id = document.cookie.split("=")[1]
+            console.log("id" + id)
             if (!id) {
                 window.location.href = "http://localhost:3000/signin"
             } else {
@@ -72,7 +65,27 @@
                 var bookdetail = $('#book_detail').val()
                 var authoruid = $('#author_id').val()
                 var categoryInput = $('#category').val()
-                var categories = categoryInput.includes(',') ? categoryInput.split(',').map(category => category.trim()) : [categoryInput.trim()];
+                
+                var category;
+                switch(categoryInput){
+                    case "1":
+                        category = "English Book"
+                        break
+                    case "2":
+                        category = "Chinese Book"
+                        break
+                    case "3":
+                        category = "Japanese Book"
+                        break
+                    case "4":
+                        category = "Thai Book"
+                        break
+                    case "5":
+                        category = "Comics/Manga"
+                        break
+                    default:
+                        category = ""
+                }
                 var productData = {
                     book_isbn: bookisbn,
                     book_title: booktitle,
@@ -82,7 +95,7 @@
                     book_price: bookprice,
                     book_detail: bookdetail,
                     author_id: authoruid,
-                    category: categories
+                    book_category: category
                 };
                 console.log(productData)
                 fetch("http://localhost:3001/product",{
@@ -149,9 +162,9 @@
                             Cart
                         </a>
                     </li>
-                    <form action="/signin" method="" class="pl-4">
+                    <a href="/signin">
                         <button id="signin" class="btn btn-dark">Sign in</button>
-                    </form>
+                    </a>
                 </ul>
             </div>
         </div>
@@ -184,7 +197,7 @@
             <div class="row mb-3">
                 <div class="col-2">
 
-                    <input class="form-control" type="text" id="book_publish_date" placeholder="Book Publish Date">
+                    <input class="form-control" type="text" id="book_publish_date" placeholder="Book Publish Date" autocomplete="off">
 
                 </div>
                 <div class="col-3">
@@ -256,11 +269,15 @@
             </div>
             <div class="row mb-3">
                 <div class="col">
-                    <div class="form-floating">
-                        <input class="form-control" id="category" placeholder="">
-                        <label class="form-label" for="category">Book Category (separate category with ",") ex.
-                            "Romance, Comedy"</label>
-                    </div>
+                    <dd>
+                        <select id="category" name="category">
+                          <option value="1">English Book</option>
+                          <option value="2">Chinese Book</option>
+                          <option value="3">Japanese Book</option>
+                          <option value="4">Thai Book</option>
+                          <option value="5">Comics/Manga</option>
+                        </select>
+                      </dd>
                 </div>
             </div>
 
