--- a/html/signin.html
+++ b/html/signin.html
@@ -15,14 +15,9 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function (){
-            try {
-                id = document.cookie.split(";")[1]
-                id = id.split("=")[1]
-                console.log("id" + id)
-                if(id){
-                window.location.href = "http://localhost:3000/admin"
-                }
-            } catch {
+            var id = document.cookie.split("=")[1]
+            if(id){
+                window.location.href = '/admin'
             }
             $('form').submit(function(event){
                 event.preventDefault();
@@ -95,9 +90,9 @@
                             Cart
                         </a>
                     </li>
-                    <form action="/signin" method="" class="pl-4">
+                    <a href="/signin">
                         <button id="signin" class="btn btn-dark">Sign in</button>
-                    </form>
+                    </a>
                 </ul>
             </div>
         </div>
