--- a/html/admin-create.html
+++ b/html/admin-create.html
@@ -16,15 +16,7 @@
     <script>
         $(document).ready(function () {
 
-            try {
-                var id = 0;
-
-                id = document.cookie.split(";")[1]
-                id = id.split("=")[1]
-                console.log("id" + id)
-            } catch {
-                window.location.href = "http://localhost:3000/signin"
-            }
+            var id = document.cookie.split("=")[1]
             if (!id) {
                 window.location.href = "http://localhost:3000/signin"
             }else{
