--- a/html/search.html
+++ b/html/search.html
@@ -166,7 +166,7 @@
   </nav>
   <!--search page-->
   <div id="wrap">
-    <div id="contentWrap">
+    <div id="contentWrap" class="d-flex flex-column align-items-center">
       <h1 class="catTtl">ADVANCED SEARCH</h1>
       <div id="subContents">
         <div id="form">
