--- a/html/admin-product-add.html
+++ b/html/admin-product-add.html
@@ -63,6 +63,7 @@
                 var bookstock = $('#book_stock').val()
                 var bookprice = $('#book_price').val()
                 var bookdetail = $('#book_detail').val()
+                var bookimage = $('#book_image').val()
                 var authoruid = $('#author_id').val()
                 var categoryInput = $('#category').val()
                 
@@ -94,6 +95,7 @@
                     book_stock: bookstock,
                     book_price: bookprice,
                     book_detail: bookdetail,
+                    book_image: bookimage,
                     author_id: authoruid,
                     book_category: category
                 };
@@ -216,6 +218,12 @@
                     <div class="form-floating">
                         <input class="form-control" type="number" id="book_price" min="0" step="0.1" placeholder="" />
                         <label class="form-label" for="book_price">Price</label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-floating">
+                        <input class="form-control" id="book_image" placeholder="" />
+                        <label class="form-label" for="book_price">Book Image (Link)</label>
                     </div>
                 </div>
             </div>
